--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
   <script>
     window.$docsify = {
       name: '笔记',
-      repo: ''
+      repo: '',
+      loadSidebar: true,
+      subMaxLevel: 3
     }
   </script>
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
