--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
   <script>
     window.$docsify = {
       name: '笔记',
-      repo: '',
+      repo: 'https://github.com/xiaoYown',
       loadSidebar: true,
       subMaxLevel: 3
     }
   </script>
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
 </body>
 </html>
