fix: 添加项目初始化准备

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <script>
     window.$docsify = {
       name: '笔记',
+      basePath: '/docsify/',
       repo: 'https://github.com/xiaoYown',
       loadSidebar: true,
       subMaxLevel: 3
