--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <script>
     window.$docsify = {
       name: '笔记',
-      basePath: '/docsify/',
+      basePath: '/blog/',
       repo: 'https://github.com/xiaoYown',
       loadSidebar: true,
       subMaxLevel: 3
