--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <script>
     window.$docsify = {
       name: '笔记',
-      basePath: '/',
+      basePath: '/blog/',
       repo: 'https://github.com/xiaoYown',
       loadSidebar: true,
       subMaxLevel: 3
