--- a/index.html
+++ b/index.html
@@ -1,43 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Document</title>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <meta name="description" content="Description">
-  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/themes/dark.css" />
-  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/gitalk/dist/gitalk.css">
-</head>
-<body>
-  <div id="app"></div>
-  <script>
-    window.$docsify = {
-      name: '笔记',
-      coverpage: true,
-      basePath: '/',
-      repo: 'https://github.com/xiaoYown',
-      loadSidebar: true,
-      subMaxLevel: 3
-    }
-  </script>
-  <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
-  <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Document</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta name="description" content="Description" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+    />
+    <link rel="stylesheet" href="/resource/docsify/themes/dark.css" />
+    <link rel="stylesheet" href="/resource/gitalk/gitalk.css" />
+  </head>
+  <body>
+    <div id="app"></div>
+    <script>
+      window.$docsify = {
+        name: "笔记",
+        coverpage: true,
+        basePath: "/",
+        repo: "https://github.com/xiaoYown",
+        loadSidebar: true,
+        subMaxLevel: 3,
+      };
+    </script>
 
-  <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/gitalk.min.js"></script>
-  <script src="//cdn.jsdelivr.net/npm/gitalk/dist/gitalk.min.js"></script>
+    <script src="/resource/docsify@4/docsify.min.js"></script>
+    <script src="/resource/docsify/lib/plugins/search.min.js"></script>
 
-  <script>
-    const gitalk = new Gitalk({
-      clientID: '8e206fb0b3f982efe267',
-      clientSecret: '4225b5806421890ca194e95687ed4a58ab2a6530',
-      repo: 'blog-comment',
-      owner: 'xiaoYown',
-      admin: ['xiaoYown'],
-      // facebook-like distraction free mode
-      distractionFreeMode: false,
-      id: decodeURIComponent(window.location.hash)
-    })
-  </script>
-</body>
+    <script src="/resource/docsify/lib/plugins/gitalk.min.js"></script>
+    <script src="/resource/gitalk/gitalk.min.js"></script>
+
+    <script>
+      function getHashValueWithoutSearch() {
+        return window.location.hash.replace(/\?.+$/, "");
+      }
+
+      var cacheHash = getHashValueWithoutSearch();
+
+      function initialGitalk() {
+        cacheHash = getHashValueWithoutSearch();
+
+        gitalk = new Gitalk({
+          clientID: "8e206fb0b3f982efe267",
+          clientSecret: "4225b5806421890ca194e95687ed4a58ab2a6530",
+          repo: "blog-comment",
+          owner: "xiaoYown",
+          admin: ["xiaoYown"],
+          // facebook-like distraction free mode
+          distractionFreeMode: false,
+          id: getHashValueWithoutSearch(),
+        });
+      }
+
+      initialGitalk();
+
+      window.addEventListener("hashchange", function () {
+        if (cacheHash === getHashValueWithoutSearch()) return;
+        initialGitalk();
+      });
+    </script>
+  </body>
 </html>
