--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
     <script src="/resource/docsify@4/docsify.min.js"></script>
     <script src="/resource/docsify/lib/plugins/search.min.js"></script>
+    <script src="/resource/prism/typescript.min.js"></script>
 
     <script src="/resource/docsify/lib/plugins/gitalk.min.js"></script>
     <script src="/resource/gitalk/gitalk.min.js"></script>
